--- a/web/themes/custom/icosaedrico/components/molecule/branding/branding.twig
+++ b/web/themes/custom/icosaedrico/components/molecule/branding/branding.twig
@@ -1,17 +1,9 @@
-<div {{ attributes.addClass }}>
-  {{ title_prefix }}
-  {% if label %}
-    <h2 {{ title_attributes }}>{{ label }}</h2>
+{% block content %}
+  {% if site_logo %}
+    <a href="{{ path('<front>') }}" rel="home"><img src="{{ site_logo }}" alt="{{ 'Inicio'|t }}" width="150px" fetchpriority="high" /></a>
   {% endif %}
-  {{ title_suffix }}
-
-  {% block content %}
-    {% if site_logo %}
-      <a href="{{ path('<front>') }}" rel="home"><img src="{{ site_logo }}" alt="{{ 'Home'|t }}" fetchpriority="high" /></a>
-    {% endif %}
-    {% if site_name %}
-      <a href="{{ path('<front>') }}" rel="home">{{ site_name }}</a>
-    {% endif %}
-    {{ site_slogan }}
-  {% endblock %}
-</div>
+  {% if site_name %}
+    <a href="{{ path('<front>') }}" rel="home">{{ site_name }}</a>
+  {% endif %}
+  {{ site_slogan }}
+{% endblock %}
