--- a/web/themes/custom/icosaedrico/css/modules.css
+++ b/web/themes/custom/icosaedrico/css/modules.css
@@ -1,3 +1,10 @@
 /* Text size */
-.text-2xl { font-size: 2.8rem !important;}
+.text-2xl {
+  font-size: 2.8rem !important;
+  line-height: 3.8rem !important;
+}
 .text-xl {  font-size: 2.2rem !important;}
+
+.content-prosa {
+  max-width: 80ch;
+}
