--- a/web/themes/custom/icosaedrico/templates/field/field--field-tags.html.twig
+++ b/web/themes/custom/icosaedrico/templates/field/field--field-tags.html.twig
@@ -44,24 +44,29 @@
 
 {% if label_hidden %}
   {% if multiple %}
-    <div{{ attributes }}>
+    <div{{ attributes.addClass("flex max-w-prose mx-auto justify-end items-center") }}>
       {% for item in items %}
         <div{{ item.attributes }}>{{ item.content }}</div>
       {% endfor %}
     </div>
   {% else %}
     {% for item in items %}
-      <div{{ attributes }}>{{ item.content }}</div>
+      <div{{ attributes.addClass("flex max-w-prose mx-auto justify-end") }}>{{ item.content }}</div>
     {% endfor %}
   {% endif %}
 {% else %}
-  <div{{ attributes }}>
-    <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
+  <div{{ attributes.addClass("flex max-w-prose mx-auto justify-end") }}>
+    <div{{ title_attributes.addClass(title_classes, "flex items-center text-sm me-3") }}>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tag-fill" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+    </svg>
+    <span>{{ label }}:</span>
+  </div>
     {% if multiple %}
       <div>
     {% endif %}
     {% for item in items %}
-      <div{{ item.attributes }}>{{ item.content }}</div>
+      {{ include('icosaedrico:bagde', { text: item.content["#title"], href: item.content["#url"], color: 'red' }) }}
     {% endfor %}
     {% if multiple %}
       </div>
