--- a/web/themes/custom/icosaedrico/components/molecules/tabs/tabs.scss
+++ b/web/themes/custom/icosaedrico/components/molecules/tabs/tabs.scss
@@ -4,10 +4,10 @@
   border-bottom: solid 0.2rem #ccc;
   padding-block: 1rem;
   padding-inline: 2rem;
-}
 
-.tab__item a.is-active {
-  font-weight: bold;
-  opacity: 1;
-  border-bottom: solid 0.2rem red;
+  &.is-active {
+    font-weight: bold;
+    opacity: 1;
+    border-bottom: solid 0.2rem red;
+  }
 }
