--- a/web/themes/custom/icosaedrico/components/organisms/branding/branding.css
+++ b/web/themes/custom/icosaedrico/components/organisms/branding/branding.css
@@ -1,15 +1,11 @@
-.branding {}
-
 .branding__title {
-  font-family: 'Lobster', sans-serif;
+  font-family: "Lobster", sans-serif;
   font-size: 4.8rem;
 }
 
 .branding__title--suffix {
   color: orange;
 }
-
-.branding__logo {}
 
 .branding__slogan {
   font-size: 1.1rem;
