add daisyui and start to apply it

--- a/web/themes/custom/icosaedrico/components/molecules/button/button.twig
+++ b/web/themes/custom/icosaedrico/components/molecules/button/button.twig
@@ -3,11 +3,9 @@
 
 {%
   set classes = [
-    'btn',
-    'btn--' ~ color|clean_class,
-    'text-sm',
-    'px-3',
-    'py-1',
+    'badge',
+    'badge--' ~ color|clean_class,
+    'text-sm'
   ]
 %}
 
