--- a/web/themes/custom/icosaedrico/templates/navigation/menu-local-task.html.twig
+++ b/web/themes/custom/icosaedrico/templates/navigation/menu-local-task.html.twig
@@ -1,3 +1,4 @@
+
 {#
 /**
  * @file
@@ -14,4 +15,4 @@
  * @see template_preprocess_menu_local_task()
  */
 #}
-  {{ include('icosaedrico:tabs', {}) }}
+{{ link }}
