--- a/web/themes/custom/icosaedrico/templates/media-library/feed-icon.html.twig
+++ b/web/themes/custom/icosaedrico/templates/media-library/feed-icon.html.twig
@@ -12,5 +12,5 @@
  */
 #}
 
-{{ include("icosaedrico:icon", { text: ('Subscribe to @title'|t({'@title': title})), name: "feed-icon", icon_url: url, size: "sm" }) }}
+{{ include("icosaedrico:icon", { icon_text: ('Subscribe to @title'|t({'@title': title})), icon_name: "feed-icon", icon_href: url, icon_size: "sm" }) }}
 
