--- a/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
+++ b/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
@@ -14,37 +14,33 @@
   <div class="branding__slogan">Desarrollo web</div>
 
 <div class="block-web-technologies flex mt-12">
-  {% embed "icosaedrico:icon" with {
-      name: "html_color",
-      text: "HTML",
-      show_text: true,
-      size: "sm"
-    } %}
-  {% endembed %}
+  {% include "icosaedrico:icon" with {
+      icon_name: "html_color",
+      icon_text: "HTML",
+      icon_text_position: "bottom",
+      icon_svg_size: "48"
+    } only %}
 
-  {% embed "icosaedrico:icon" with {
-      name: "css_color",
-      text: "CSS",
-      show_text: true,
-      size: "sm"
-    } %}
-  {% endembed %}
+  {% include "icosaedrico:icon" with {
+      icon_name: "css_color",
+      icon_text: "CSS",
+      icon_text_position: "bottom",
+      icon_svg_size: "48"
+    } only %}
 
-  {% embed "icosaedrico:icon" with {
-      name: "js_color",
-      text: "JS",
-      show_text: true,
-      size: "sm"
-    } %}
-  {% endembed %}
+  {% include "icosaedrico:icon" with {
+      icon_name: "js_color",
+      icon_text: "JS",
+      icon_text_position: "bottom",
+      icon_svg_size: "48"
+    } only %}
 
-  {% embed "icosaedrico:icon" with {
-      name: "drupal_color",
-      text: "Drupal",
-      show_text: true,
-      size: "sm"
-    } %}
-  {% endembed %}
+  {% include "icosaedrico:icon" with {
+      icon_name: "drupal_color",
+      icon_text: "Drupal",
+      icon_text_position: "bottom",
+      icon_svg_size: "48"
+    } only %}
 </div>
 
 
