--- a/web/themes/custom/icosaedrico/components/organisms/main_navigation/main_navigation.twig
+++ b/web/themes/custom/icosaedrico/components/organisms/main_navigation/main_navigation.twig
@@ -1,47 +1,48 @@
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
-{% set classes = [
+    {% set classes = [
   "flex",
   "justify-center",
   "mb-5",
 ] %}
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby').addClass(classes) }}>
-  {# Label. If not displayed, we still provide it for screen readers. #}
-  {% if not configuration.label_display %}
-    {% set title_attributes = title_attributes.addClass('visually-hidden') %}
-  {% endif %}
-  {{ title_prefix }}
-  <h2{{ title_attributes.setAttribute('id', heading_id) }}>{{ configuration.label }}</h2>
-  {{ title_suffix }}
+    <div
+      role="navigation" aria-labelledby="{{ heading_id }}" {{ attributes|without('role', 'aria-labelledby').addClass(classes) }}>
+      {# Label. If not displayed, we still provide it for screen readers. #}
+      {% if not configuration.label_display %}
+        {% set title_attributes = title_attributes.addClass('visually-hidden') %}
+      {% endif %}
+      {{ title_prefix }}
+      <h2{{title_attributes.setAttribute('id',heading_id)}}>{{ configuration.label }}</h2>
+      {{ title_suffix }}
 
-{% block content %}
+      {% block content %}
 
-{% import _self as menus %}
+        {% import _self as menus %}
 
-{#
-  We call a macro which calls itself to render the full tree.
-  @see https://twig.symfony.com/doc/3.x/tags/macro.html
-#}
-{{ menus.menu_links(items, attributes, 0) }}
+        {#
+          We call a macro which calls itself to render the full tree.
+          @see https://twig.symfony.com/doc/3.x/tags/macro.html
+        #}
+        {{ menus.menu_links(items, attributes, 0) }}
 
-{% macro menu_links(items, attributes, menu_level) %}
-  {% import _self as menus %}
-  {% if items %}
-    {% if menu_level == 0 %}
-      <ul {{ attributes.addClass("main-navigation flex") }}>
-    {% else %}
-      <ul {{ attributes.addClass("main-navigation flex") }}>
-    {% endif %}
-    {% for item in items %}
-      <li {{ item.attributes.addClass("main-navigation__item py-2 px-4") }}>
-        {{ link(item.title, item.url) }}
-        {% if item.below %}
-          {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
-        {% endif %}
-      </li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endmacro %}
+        {% macro menu_links(items, attributes, menu_level) %}
+          {% import _self as menus %}
+          {% if items %}
+            {% if menu_level == 0 %}
+              <ul {{ attributes.addClass("menu menu-horizontal px-1") }}>
+              {% else %}
+                <ul {{ attributes.addClass("p-2") }}>
+                {% endif %}
+                {% for item in items %}
+                  <li {{ item.attributes }}>
+                    {{ link(item.title, item.url) }}
+                    {% if item.below %}
+                      {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
+                    {% endif %}
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
+          {% endmacro %}
 
-  {% endblock %}
-</nav>
+        {% endblock %}
+      </div>
