update theme with clean files

--- a/web/themes/custom/icosaedrico/templates/layouts/region--header.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/region--header.html.twig
@@ -41,7 +41,7 @@
           </li>
         </ul>
       </div>
-      <img src="{{ directory ~ '/logo.svg' }}" alt="{{ 'Inicio'|t }}" width="72" fetchpriority="high" />
+      <img src="/{{ directory ~ '/logo.svg' }}" alt="{{ 'Inicio'|t }}" width="72" fetchpriority="high" />
     </div>
     <div class="navbar-center hidden lg:flex">
       {{content.icosaedrico_main_menu}}
