--- a/web/themes/custom/icosaedrico/templates/navigation/menu-local-tasks.html.twig
+++ b/web/themes/custom/icosaedrico/templates/navigation/menu-local-tasks.html.twig
@@ -12,7 +12,7 @@
  */
 #}
     {% embed 'icosaedrico:tabs'  with {
-  tab_type: "bordered",
+  tab_type: "lifted",
   tab_size: "lg"
 } %}
 {% block tab_content_primary %}
