--- a/web/themes/custom/icosaedrico/templates/layouts/node--projects--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/node--projects--card.html.twig
@@ -88,18 +88,19 @@
         badge_text: tech_tag,
         badge_href: card_button_url,
         badge_target: '_blank',
-        badge_color: 'primary'
+        badge_color: 'primary',
+        badge_size: 'sm'
       } only %}
     {% endfor %}
 
     {% include 'icosaedrico:button' with {
       button_tag: "a",
-      button_color: "primary",
-      button_disable: "class",
+      button_color: "accent",
+      button_size: "sm",
       button_text: node.field_project_url.0.title|default('Ver más'),
       button_href: card_button_url,
       button_target: '_blank',
-      button_icon: "feed-icon"
+      button_icon: "arrow-right"
     } only %}
     {{ content.body }}
   {% endblock %}
