--- a/web/themes/custom/icosaedrico/components/organisms/alert/alert.twig
+++ b/web/themes/custom/icosaedrico/components/organisms/alert/alert.twig
@@ -1,5 +1,5 @@
 {% include "icosaedrico:icon" with {
-  icon_name: alert_type,
+  icon_name: alert_icon,
   icon_svg_size: "48"
 } only %}
 <p>{{ alert_title }}</p>
