--- a/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
+++ b/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
@@ -14,35 +14,38 @@
   <div class="branding__slogan">Desarrollo web</div>
 
 <div class="block-web-technologies flex mt-12">
+
   {% include "icosaedrico:icon" with {
-      icon_name: "html_color",
-      icon_text: "HTML",
-      icon_text_position: "bottom",
-      icon_svg_size: "72"
-    } only %}
+    icon_name: "html_color",
+    icon_text: "HTML",
+    icon_text_position: "bottom",
+    icon_svg_size: "72",
+    icon_svg_classes: "mx-4"
+  } only %}
 
   {% include "icosaedrico:icon" with {
       icon_name: "css_color",
       icon_text: "CSS",
       icon_text_position: "bottom",
-      icon_svg_size: "72"
+      icon_svg_size: "72",
+      icon_svg_classes: "mx-4"
     } only %}
 
   {% include "icosaedrico:icon" with {
       icon_name: "js_color",
       icon_text: "JS",
       icon_text_position: "bottom",
-      icon_svg_size: "72"
+      icon_svg_size: "72",
+      icon_svg_classes: "mx-4"
     } only %}
 
   {% include "icosaedrico:icon" with {
       icon_name: "drupal_color",
       icon_text: "Drupal",
       icon_text_position: "bottom",
-      icon_svg_size: "72"
+      icon_svg_size: "72",
+      icon_svg_classes: "mx-4"
     } only %}
 </div>
-
-
 {% endblock %}
 </div>
