--- a/web/themes/custom/icosaedrico/templates/content/node--article--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--article--card.html.twig
@@ -67,42 +67,52 @@
  *
  */
 #}
-
-{% set tech_tags = [] %}
-{% for item in node.field_project_tech %}
-  {% set tech_tags = tech_tags|merge([item.entity.label]) %}
-{% endfor %}
-
 {% embed 'icosaedrico:card' with {
   card_title: label,
-  card_image_position: "left",
-  card_button_url: node.field_project_url.0.uri|default('/')
+  card_date: node.getCreatedTime|format_date('long'),
+  card_url: url,
+  card_responsive: true
 } %}
- {% block card_media %}
-    {{ content.field_project_images }}
+  {% block card_media %}
+    {{ content.field_image }}
   {% endblock %}
-
   {% block card_content %}
-    {% for tech_tag in tech_tags %}
-      {% include 'icosaedrico:badge' with {
-        badge_text: tech_tag,
-        badge_href: card_button_url,
-        badge_target: '_blank',
-        badge_color: 'primary',
-        badge_size: 'sm'
-      } only %}
-    {% endfor %}
+
+    {{ content.body }}
+
+    {# Itera sobre los términos de taxonomía si existen #}
+    {% if node.field_tags is not empty %}
+      {% for item in node.field_tags %}
+        {% set term_url = path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.id}) %}
+        {% set tagTitle = item.entity.label|default('Etiqueta sin título') %}
+        {% include 'icosaedrico:badge' with {
+          badge_text: tagTitle,
+          badge_href: term_url,
+          badge_target: '_blank',
+          badge_color: 'primary',
+          badge_size: 'sm'
+        } only %}
+      {% endfor %}
+    {% endif %}
 
     {% include 'icosaedrico:button' with {
       button_tag: "a",
-      button_color: "accent",
+      button_color: "link",
       button_size: "sm",
-      button_text: node.field_project_url.0.title|default('Ver más'),
-      button_href: card_button_url,
+      button_text: node.field_project_url.0.title|default('Leer'),
+      button_href: url,
       button_target: '_blank',
       button_icon: "arrow-right"
     } only %}
-    {{ content.body }}
   {% endblock %}
 {% endembed %}
-
+{% if display_submitted %}
+    <footer>
+      {{ author_picture }}
+      <div{{ author_attributes }}>
+        {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
+        {{ metadata }}
+      </div>
+    </footer>
+  {% endif %}
+{{ author_picture.name }}
