--- a/web/themes/custom/icosaedrico/templates/content/node--article.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--article.html.twig
@@ -70,9 +70,6 @@
 <article {{ attributes }}>
   {% if display_submitted %}
     <header>
-
-      {{ author_picture }}
-
       {{ title_prefix }}
       {% if label and not page %}
         <h2 class="text-xl py-4 mt-2 pb-4" {{ title_attributes }}>
@@ -80,40 +77,35 @@
         </h2>
       {% endif %}
 
-      <div {{ author_attributes.addClass("flex items-center bg-neutral") }}>
-        <div class="p-1 bg-neutral">
-
+      {# Date #}
+      <div {{ author_attributes.addClass("flex items-center") }}>
+        <div class="p-1">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-date mx-1" viewbox="0 0 16 16">
             <path d="M6.445 11.688V6.354h-.633A13 13 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23"/>
             <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
           </svg>
 
         </div>
-        <span class="text-sm bg-neutral p-1 ps-2">{{ date }}</span>
+        <span class="text-sm p-1">{{ node.getCreatedTime|format_date('long') }}</span>
       </div>
 
     </header>
   {% endif %}
 
-    <div {{ content_attributes }}>
+  <div {{ content_attributes.addClass("mx-auto max-w-max") }}>
     {{ content }}
-    </div>
+  </div>
 
-  <footer class="capitalize mt-2 text-center max-w-max">
-    {% if not teaser %}
-      {# {{ author_picture }} #}
-      {% set user_picture_file = node.uid.entity.user_picture.entity.fileuri %}
-      {% set user_picture_url = file_url(user_picture_file) %}
-      {% set user_picture_width = user_picture_width|default('72') %}
-      {% set user_picture_height = user_picture_height|default('72') %}
+  <footer class="mt-2">
 
-      {% include "icosaedrico:avatar" with {
-        user_name: node.uid.entity.name.value,
-        user_picture_url: user_picture_url,
-        user_picture_width: user_picture_width,
-        user_picture_height: user_picture_height,
-      } %}
-    {% endif %}
+  {% embed 'icosaedrico:avatar' with {
+    avatar_name: node.uid.entity.name.value,
+  } %}
+    {% block card_media %}
+    {% endblock %}
+  {% endembed %}
+
+    {{ author_picture }}
     {{ metadata }}
   </footer>
 </article>
