--- a/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
@@ -68,39 +68,29 @@
  */
 #}
 
+{% set tech_tags = [] %}
+{% for item in node.field_project_tech %}
+  {% set tech_tags = tech_tags|merge([item.entity.label]) %}
+{% endfor %}
+
 {% embed 'icosaedrico:card' with {
-  card_title: label,
+  card_title: label["#items"].value,
   card_button_url: node.field_project_url.0.uri|default('/')
 } %}
-  {% block card_media %}
-    {{ content.field_image }}
+ {% block card_media %}
+    {{ content.field_project_images }}
   {% endblock %}
   {% block card_content %}
-    {# Itera sobre los términos de taxonomía si existen #}
-    {% if node.field_tags is not empty %}
-      {% for item in node.field_tags %}
-        {% set term_url = path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.id}) %}
-        {% set tagTitle = item.entity.label|default('Etiqueta sin título') %}
-        {% include 'icosaedrico:badge' with {
-          badge_text: tagTitle,
-          badge_href: term_url,
-          badge_target: '_blank',
-          badge_color: 'primary',
-          badge_size: 'sm'
-        } only %}
-      {% endfor %}
-    {% endif %}
-
-    {{ content.body }}
-
-    {% include 'icosaedrico:button' with {
-      button_tag: "a",
-      button_color: "accent",
-      button_size: "sm",
-      button_text: node.field_project_url.0.title|default('Ver más'),
-      button_href: url,
-      button_target: '_blank',
-      button_icon: "arrow-right"
-    } only %}
+    {% for tech_tag in tech_tags %}
+      {% include 'icosaedrico:badge' with {
+        badge_text: tech_tag,
+        badge_href: card_button_url,
+        badge_target: '_blank',
+        badge_color: 'neutral',
+        badge_size: 'sm'
+      } only %}
+    {% endfor %}
   {% endblock %}
 {% endembed %}
+
+
