--- a/web/themes/custom/icosaedrico/templates/media-library/feed-icon.html.twig
+++ b/web/themes/custom/icosaedrico/templates/media-library/feed-icon.html.twig
@@ -11,6 +11,13 @@
  *   - class: HTML classes to be applied to the feed link.
  */
 #}
-
-{{ include("icosaedrico:icon", { icon_text: ('Subscribe to @title'|t({'@title': title})), icon_name: "feed-icon", icon_href: url, icon_size: "sm" }) }}
-
+<a href="{{ url }}"{{ attributes }}>
+{{ include('icosaedrico:icon',{
+  icon_text: 'Subscribe to @title'|t({ '@title': title }),
+  icon_name: 'feed-icon',
+  icon_href: url,
+  icon_svg_fill: "orange",
+  icon_size: 'sm'
+  })
+}}
+</a>
