--- a/web/themes/custom/icosaedrico/templates/media-library/status-messages.html.twig
+++ b/web/themes/custom/icosaedrico/templates/media-library/status-messages.html.twig
@@ -23,18 +23,24 @@
     <div data-drupal-messages>
       {% for type, messages in message_list %}
 
-        {# Set "status" as "info" so it fit DaisyIU naming #}
         {% if type == "status" %}
-          {% set type = "info" %}
+          {% set type_icon = "info" %}
+          {% set type_class = "info" %}
+        {% endif %}
+
+        {% if type == "warning" %}
+        {% set type_icon = "exclamation-triangle" %}
+        {% set type_class = "warning" %}
         {% endif %}
 
         {% if type == "error" %}
-        {% set type = "exclamation-triangle" %}
+        {% set type_icon = "x-circle" %}
+        {% set type_class = "error" %}
         {% endif %}
 
         {% set alert_classes = [
           'alert',
-          "alert-" ~ type,
+          "alert-" ~ type_class,
         ] %}
 
         <div role="contentinfo" aria-label="{{ status_headings[type] }}" {{ attributes.addClass(alert_classes)|without('role', 'aria-label') }}>
@@ -51,6 +57,7 @@
                   <li>
                     {% include "icosaedrico:alert" with {
                       alert_type: type,
+                      alert_icon: type_icon,
                       alert_title: message
                     } only %}
 
@@ -61,6 +68,7 @@
             {% else %}
                {% include "icosaedrico:alert" with {
                   alert_type: type,
+                  alert_icon: type_icon,
                   alert_title: messages|first
                 } only %}
             {% endif %}
