--- a/web/themes/custom/icosaedrico/templates/navigation/links.html.twig
+++ b/web/themes/custom/icosaedrico/templates/navigation/links.html.twig
@@ -44,12 +44,9 @@
           <li{{item.attributes}}>
             {% include 'icosaedrico:button' with {
       button_tag: "a",
-      button_color: "primary",
-      button_disable: "class",
+      button_color: "link",
       button_text: item.text,
       button_href: item.link['#url'],
-      button_target: '_blank',
-      button_icon: "feed-icon"
     } only %}
           </li>
         {%- endfor -%}
