--- a/web/themes/custom/icosaedrico/components/molecules/card/card.twig
+++ b/web/themes/custom/icosaedrico/components/molecules/card/card.twig
@@ -11,45 +11,41 @@
   card_classes,
 ]
 %}
-{%
+    {%
   set classes_body = [
-    'card-body',
-    card_image_position == "center" ? "items-center text-center",
-  ]
+  'card-body',
+  card_image_position == "center" ? "items-center text-center",
+]
 %}
-  <div class="{{ classes_wrapper|join(' ') }}"> {% block card_media %}{% endblock %}
-    <div class="{{ classes_body|join(' ') }}">
-      {% if card_url is not empty %}
-        <a href="{{ card_url|striptags|trim }}">
-        {% endif %}
+    <div class="{{ classes_wrapper|join(' ') }}">
+        {% block card_media %}{% endblock %}
+      <div class="{{ classes_body|join(' ') }}">
         <h3 class="card-title">
           {{ card_title }}
         </h3>
-        {% if card_url is not empty %}
-        </a>
-      {% endif %}
-
-      {% if card_date is not empty %}
+        {% if card_date is not empty %}
         <div class="flex items-center text-sm text-gray-500 dark:text-gray-400">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-date" viewbox="0 0 16 16">
-            <path d="M6.445 11.688V6.354h-.633A13 13 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23"></path>
-            <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"></path>
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-date" viewBox="0 0 16 16">
+              <path d="M6.445 11.688V6.354h-.633A13 13 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23"></path>
+              <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"></path>
+            </svg>
           <date class="ps-2">
             {{ card_date }}
           </date>
         </div>
-      {% endif %}
+        {% endif %}
+        <div>{{ card_tags }}</div>
+        <div class="card-actions justify-end">
+        {% block card_content %}{% endblock %}
 
-      <div class="card-actions justify-end"> {% block card_content %}{% endblock %}
-        {% include 'icosaedrico:button' with {
-          button_tag: "a",
-          button_color: "accent",
-          button_size: "sm",
-          button_text: card_title,
-          button_href: card_button_url,
-          button_icon: "arrow-right"
-        } only %}
+
+          {% if card_url is not empty  %}
+            <a class="btn btn-primary" href="{{ card_url|striptags|trim }}">
+              {{ card_url_title }}
+            </a>
+          {% endif %}
+
+
+        </div>
       </div>
     </div>
-  </div>
