--- a/web/themes/custom/icosaedrico/css/output.css
+++ b/web/themes/custom/icosaedrico/css/output.css
@@ -12900,6 +12900,10 @@ html:has(.drawer-open.drawer-open) {
   padding: 0.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
