--- a/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
@@ -67,30 +67,36 @@
  *
  */
 #}
-
-{% set tech_tags = [] %}
-{% for item in node.field_project_tech %}
-  {% set tech_tags = tech_tags|merge([item.entity.label]) %}
-{% endfor %}
-
 {% embed 'icosaedrico:card' with {
-  card_title: label["#items"].value,
+  card_title: label,
   card_button_url: node.field_project_url.0.uri|default('/')
 } %}
  {% block card_media %}
     {{ content.field_project_images }}
   {% endblock %}
+
   {% block card_content %}
-    {% for tech_tag in tech_tags %}
-      {% include 'icosaedrico:badge' with {
-        badge_text: tech_tag,
-        badge_href: card_button_url,
-        badge_target: '_blank',
-        badge_color: 'neutral',
-        badge_size: 'sm'
-      } only %}
-    {% endfor %}
+   {% for item in node.field_project_tech %}
+        {% set term_url = path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.id}) %}
+        {% set tagTitle = item.entity.label|default('Etiqueta sin título') %}
+        {% include 'icosaedrico:badge' with {
+          badge_text: tagTitle,
+          badge_href: term_url,
+          badge_target: '_blank',
+          badge_color: 'primary',
+          badge_size: 'sm'
+        } only %}
+      {% endfor %}
+
+    {% include 'icosaedrico:button' with {
+      button_tag: "a",
+      button_color: "accent",
+      button_size: "sm",
+      button_text: node.field_project_url.0.title|default('Ver más'),
+      button_href: card_button_url,
+      button_target: '_blank',
+      button_icon: "arrow-right"
+    } only %}
   {% endblock %}
 {% endembed %}
-
 
