--- a/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
@@ -69,12 +69,12 @@
 #}
 {% embed 'icosaedrico:card' with {
   card_title: label,
+  card_button_text: "Ver online",
   card_button_url: node.field_project_url.0.uri|default('/')
 } %}
  {% block card_media %}
     {{ content.field_project_images }}
   {% endblock %}
-
   {% block card_content %}
    {% for item in node.field_project_tech %}
         {% set term_url = path('entity.taxonomy_term.canonical', {'taxonomy_term': item.entity.id}) %}
@@ -87,16 +87,6 @@
           badge_size: 'sm'
         } only %}
       {% endfor %}
-
-    {% include 'icosaedrico:button' with {
-      button_tag: "a",
-      button_color: "accent",
-      button_size: "sm",
-      button_text: node.field_project_url.0.title|default('Ver más'),
-      button_href: card_button_url,
-      button_target: '_blank',
-      button_icon: "arrow-right"
-    } only %}
   {% endblock %}
 {% endembed %}
 
